--- a/index.html
+++ b/index.html
@@ -7,8 +7,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-
-<script src="script.js"></script>    
+    <div class="container">
+        <div class="calculator">
+            <h2 id="screen"></h2>    
+            <button id="clear">Clear</buttton>
+            <button>/</button>
+            <button>*</button>
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button>-</button>
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button id="add">+</button>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>0</button>
+            <button>00</button>
+            <button>.</buttton>
+            <button id="equal">=</button>
+        </div>    
+    </div>
+    <script src="script.js"></script>    
 </body>
 </html>
